[Yuzhou] hash table structure